# lunatic

./: .gitmodules  CMakeLists.txt  README.md
CMakeModules/: DetectArchitecture.cmake
include/lunatic/: cpu.hpp
src/: CMakeLists.txt  jit.cpp
src/backend/x86_64/: backend.cpp  backend.hpp  compile_alu.cpp  compile_context.cpp  compile_coprocessor.cpp  compile_flags.cpp  compile_flush.cpp  compile_memory.cpp  compile_multiply.cpp  compile_shift.cpp  compile_simd.cpp  register_allocator.cpp  register_allocator.hpp
src/common/: optional.hpp  pool_allocator.cpp  pool_allocator.hpp
src/frontend/: basic_block.hpp  basic_block_cache.hpp  state.cpp  state.hpp
src/frontend/decode/: arm.hpp  thumb.hpp
src/frontend/decode/definition/: block_data_transfer.hpp  branch_exchange.hpp  branch_relative.hpp  common.hpp  coprocessor_register_transfer.hpp  count_leading_zeros.hpp  data_processing.hpp  exception.hpp  halfword_signed_transfer.hpp  multiply.hpp  multiply_long.hpp  parallel_add_sub.hpp  saturating_add_sub.hpp  signed_halfword_multiply.hpp  single_data_swap.hpp  single_data_transfer.hpp  status_transfer.hpp  thumb_bl_suffix.hpp
src/frontend/ir/: emitter.cpp  emitter.hpp  opcode.hpp  register.hpp  value.hpp
src/frontend/ir_opt/: constant_propagation.cpp  constant_propagation.hpp  context_load_store_elision.cpp  dead_code_elision.cpp  dead_code_elision.hpp  dead_flag_elision.cpp  dead_flag_elision.hpp  pass.hpp
src/frontend/translator/: translator.cpp  translator.hpp
src/frontend/translator/handle/: parallel_add_sub.cpp
test/: CMakeLists.txt  alu.cpp  main.cpp
